complete hero section

--- a/index.html
+++ b/index.html
@@ -29,11 +29,16 @@
   </head>
   <body>
     <!-- Hero Section Start -->
-    <div class="container">
-      <div class="content">
+    <div class="container-fluid hero-fluid">
+      <div class="content hero-section">
+        <img
+          src="./assets/images/hero-top-bg.png"
+          alt="bg-img"
+          class="hero-top-overlay"
+        />
         <div class="row">
           <!-- Navigation Start -->
-          <nav class="navbar navbar-expand-lg">
+          <nav class="navbar navbar-expand-lg nav-section">
             <div class="container-fluid">
               <a class="navbar-brand" href="index.html">
                 <img src="./assets/images/logo.png" alt="logo" />
@@ -121,6 +126,24 @@
               </div>
             </div>
           </nav>
+          <!-- Navigation End -->
+          <!-- Hero content start -->
+          <div class="hero-content">
+            <h4 class="hero-content-tagline">Welcome To Our Grocery Store</h4>
+            <h2 class="hero-content-title">
+              Shop Online For<br />
+              Fresh Groceries
+            </h2>
+            <p class="hero-content-description">
+              Lorem ipsum dolor sit amet consectetur <br />
+              adipisicing elit. Nam in praesentium consequuntur!
+            </p>
+            <div class="hero-content-button">
+              <button class="btn btn-callToAction">Shop Now</button>
+              <button class="btn btn-callToAction-alt">Read more</button>
+            </div>
+          </div>
+          <!-- Hero content End -->
         </div>
       </div>
     </div>
