responsive hero section

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
     <!-- Custom Stylesheets -->
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/responsive.css" />
   </head>
   <body>
     <!-- Hero Section Start -->
@@ -128,15 +129,15 @@
           </nav>
           <!-- Navigation End -->
           <!-- Hero content start -->
-          <div class="hero-content">
+          <div class="hero-content col-md-6">
             <h4 class="hero-content-tagline">Welcome To Our Grocery Store</h4>
             <h2 class="hero-content-title">
               Shop Online For<br />
               Fresh Groceries
             </h2>
             <p class="hero-content-description">
-              Lorem ipsum dolor sit amet consectetur <br />
-              adipisicing elit. Nam in praesentium consequuntur!
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam in
+              praesentium consequuntur!
             </p>
             <div class="hero-content-button">
               <button class="btn btn-callToAction">Shop Now</button>
