add card animation

--- a/index.html
+++ b/index.html
@@ -212,6 +212,9 @@
             </div>
             <div class="col-12 products-grid">
               <div class="product-card">
+                <div class="button__horizontal"></div>
+                <div class="button__vertical"></div>
+
                 <span class="hot-tag inline-center">hot</span>
                 <div class="favorite-product inline-center">
                   <i class="fa-solid fa-heart"></i>
