--- a/index.html
+++ b/index.html
@@ -236,8 +236,175 @@
                   <a href="./single-product.html">Beef Steak</a>
                 </h4>
                 <div class="product-price">
+                  <del>$12</del>
+                  <span class="discount-price">$10 </span>
+                </div>
+                <button
+                  class="btn btn-add-to-cart text-uppercase btn-callToAction"
+                >
+                  Add to cart
+                </button>
+              </div>
+
+              <div class="product-card">
+                <div class="button__horizontal"></div>
+                <div class="button__vertical"></div>
+
+                <span class="hot-tag inline-center">hot</span>
+                <div class="favorite-product inline-center">
+                  <i class="fa-solid fa-heart"></i>
+                </div>
+                <a href="./single-product.html"
+                  ><img
+                    src="./assets/images/products/02.png"
+                    alt="product-img"
+                    class="product-img"
+                /></a>
+                <div class="product-ratting">
+                  <i class="fa-solid fa-star"></i
+                  ><i class="fa-solid fa-star"></i>
+                  <i class="fa-regular fa-star"></i
+                  ><i class="fa-regular fa-star"></i
+                  ><i class="fa-regular fa-star"></i>
+                </div>
+                <h4 class="product-title text-capitalize">
+                  <a href="./single-product.html">Broccoli</a>
+                </h4>
+                <div class="product-price">
                   <del>$20</del>
                   <span class="discount-price">$15 </span>
+                </div>
+                <button
+                  class="btn btn-add-to-cart text-uppercase btn-callToAction"
+                >
+                  Add to cart
+                </button>
+              </div>
+              <div class="product-card">
+                <div class="button__horizontal"></div>
+                <div class="button__vertical"></div>
+
+                <span class="hot-tag inline-center">hot</span>
+                <div class="favorite-product inline-center">
+                  <i class="fa-solid fa-heart"></i>
+                </div>
+                <a href="./single-product.html"
+                  ><img
+                    src="./assets/images/products/03.png"
+                    alt="product-img"
+                    class="product-img"
+                /></a>
+                <div class="product-ratting">
+                  <i class="fa-solid fa-star"></i
+                  ><i class="fa-solid fa-star"></i>
+                  <i class="fa-regular fa-star"></i
+                  ><i class="fa-regular fa-star"></i
+                  ><i class="fa-regular fa-star"></i>
+                </div>
+                <h4 class="product-title text-capitalize">
+                  <a href="./single-product.html">Strawberries</a>
+                </h4>
+                <div class="product-price">
+                  <del>$30</del>
+                  <span class="discount-price">$18 </span>
+                </div>
+                <button
+                  class="btn btn-add-to-cart text-uppercase btn-callToAction"
+                >
+                  Add to cart
+                </button>
+              </div>
+              <div class="product-card">
+                <div class="button__horizontal"></div>
+                <div class="button__vertical"></div>
+                <div class="favorite-product inline-center">
+                  <i class="fa-solid fa-heart"></i>
+                </div>
+                <a href="./single-product.html"
+                  ><img
+                    src="./assets/images/products/04.png"
+                    alt="product-img"
+                    class="product-img"
+                /></a>
+                <div class="product-ratting">
+                  <i class="fa-solid fa-star"></i
+                  ><i class="fa-solid fa-star"></i>
+                  <i class="fa-regular fa-star"></i
+                  ><i class="fa-regular fa-star"></i
+                  ><i class="fa-regular fa-star"></i>
+                </div>
+                <h4 class="product-title text-capitalize">
+                  <a href="./single-product.html">Fresh Honey</a>
+                </h4>
+                <div class="product-price">
+                  <del>$50</del>
+                  <span class="discount-price">$39</span>
+                </div>
+                <button
+                  class="btn btn-add-to-cart text-uppercase btn-callToAction"
+                >
+                  Add to cart
+                </button>
+              </div>
+              <div class="product-card">
+                <div class="button__horizontal"></div>
+                <div class="button__vertical"></div>
+                <div class="favorite-product inline-center">
+                  <i class="fa-solid fa-heart"></i>
+                </div>
+                <a href="./single-product.html"
+                  ><img
+                    src="./assets/images/products/05.png"
+                    alt="product-img"
+                    class="product-img"
+                /></a>
+                <div class="product-ratting">
+                  <i class="fa-solid fa-star"></i
+                  ><i class="fa-solid fa-star"></i>
+                  <i class="fa-regular fa-star"></i
+                  ><i class="fa-regular fa-star"></i
+                  ><i class="fa-regular fa-star"></i>
+                </div>
+                <h4 class="product-title text-capitalize">
+                  <a href="./single-product.html">Fresh Milk</a>
+                </h4>
+                <div class="product-price">
+                  <del>$10</del>
+                  <span class="discount-price">$08</span>
+                </div>
+                <button
+                  class="btn btn-add-to-cart text-uppercase btn-callToAction"
+                >
+                  Add to cart
+                </button>
+              </div>
+              <div class="product-card">
+                <div class="button__horizontal"></div>
+                <div class="button__vertical"></div>
+
+                <span class="hot-tag inline-center">hot</span>
+                <div class="favorite-product inline-center">
+                  <i class="fa-solid fa-heart"></i>
+                </div>
+                <a href="./single-product.html"
+                  ><img
+                    src="./assets/images/products/06.png"
+                    alt="product-img"
+                    class="product-img"
+                /></a>
+                <div class="product-ratting">
+                  <i class="fa-solid fa-star"></i
+                  ><i class="fa-solid fa-star"></i>
+                  <i class="fa-regular fa-star"></i
+                  ><i class="fa-regular fa-star"></i
+                  ><i class="fa-regular fa-star"></i>
+                </div>
+                <h4 class="product-title text-capitalize">
+                  <a href="./single-product.html">Mango Beverage</a>
+                </h4>
+                <div class="product-price">
+                  <del>$22</del>
+                  <span class="discount-price">$118 </span>
                 </div>
                 <button
                   class="btn btn-add-to-cart text-uppercase btn-callToAction"
