--- a/index.html
+++ b/index.html
@@ -202,10 +202,10 @@
           </div>
         </div>
       </section>
-
+      <!-- Trending Product Section Start -->
       <section class="container space-bottom">
         <div class="content">
-          <row>
+          <div class="row">
             <div class="col-12 section-titles">
               <h5 class="tagline">Most Popular</h5>
               <h2 class="title">Trending Products</h2>
@@ -413,9 +413,25 @@
                 </button>
               </div>
             </div>
-          </row>
+            <div class="row promo-banner">
+              <div class="col-md-3 promo-title">
+                <p><span>50%</span> off</p>
+                <a href="">show now <i class="fa-solid fa-arrow-right"></i></a>
+              </div>
+              <div class="col-md-6 promo-tagline">
+                Popular and Trending Products
+              </div>
+              <div class="col-md-3 promo-img">
+                <img
+                  src="./assets/images/adverticement-banar.png"
+                  alt="Promotion"
+                />
+              </div>
+            </div>
+          </div>
         </div>
       </section>
+      <!-- Trending Product Section Start -->
     </main>
 
     <!-- Script Files -->
