--- a/index.html
+++ b/index.html
@@ -432,6 +432,30 @@
         </div>
       </section>
       <!-- Trending Product Section Start -->
+      <!-- About Section Start -->
+      <section class="container-fluid about-section">
+        <div class="content space-top">
+          <div class="row">
+            <div class="col-6"></div>
+            <div class="col-6 about-card">
+              <h5 class="about-title">About Us</h5>
+              <h2 class="about-tagline">Popular and Trending Products</h2>
+              <p class="about-card-description">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Aperiam fugit eaque quam debitis consectetur accusamus at
+                voluptatibus provident dolorem consequuntur?
+              </p>
+              <p class="about-card-description">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Aperiam fugit eaque quam debitis consectetur accusamus at
+                voluptatibus provident dolorem consequuntur?
+              </p>
+              <button class="btn btn-callToAction-alt">Read more</button>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- About Section End -->
     </main>
 
     <!-- Script Files -->
