service section complete

--- a/index.html
+++ b/index.html
@@ -438,8 +438,10 @@
           <div class="row">
             <div class="col-6"></div>
             <div class="col-6 about-card">
-              <h5 class="about-title">About Us</h5>
-              <h2 class="about-tagline">Popular and Trending Products</h2>
+              <div class="section-titles">
+                <h5 class="tagline">About Us</h5>
+                <h2 class="title">Popular and Trending Products</h2>
+              </div>
               <p class="about-card-description">
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                 Aperiam fugit eaque quam debitis consectetur accusamus at
@@ -456,6 +458,80 @@
         </div>
       </section>
       <!-- About Section End -->
+
+      <!-- Service Section Start -->
+
+      <section class="container">
+        <div class="content services-section space-bottom space-top">
+          <div class="row">
+            <div class="col-md-3">
+              <div class="services d-flex flex-column justify-content-between">
+                <div class="service-card">
+                  <img
+                    src="./assets/images/icons/doller-icon.png"
+                    alt="service icon"
+                    class="service-icon"
+                  />
+                  <h4 class="service-title">Quality Products</h4>
+                  <p class="service-description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Doloribus
+                  </p>
+                </div>
+
+                <div class="service-card">
+                  <img
+                    src="./assets/images/icons/product-move-icon.png"
+                    alt="service icon"
+                    class="service-icon"
+                  />
+                  <h4 class="service-title">Fast Delivery</h4>
+                  <p class="service-description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Doloribus
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 text-center">
+              <img src="./assets/images/red-cart.png" alt="" />
+              <button class="btn btn-callToAction-alt d-inline">
+                SHOP NOW
+              </button>
+            </div>
+            <div class="col-md-3">
+              <div class="services d-flex flex-column justify-content-between">
+                <div class="service-card">
+                  <img
+                    src="./assets/images/icons/cart-icon.png"
+                    alt="service icon"
+                    class="service-icon"
+                  />
+                  <h4 class="service-title">Order Online</h4>
+                  <p class="service-description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Doloribus
+                  </p>
+                </div>
+
+                <div class="service-card">
+                  <img
+                    src="./assets/images/icons/call-icon.png"
+                    alt="service icon"
+                    class="service-icon"
+                  />
+                  <h4 class="service-title">24/7 Service</h4>
+                  <p class="service-description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Doloribus
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Service Section End -->
     </main>
 
     <!-- Script Files -->
