add testimonial page

--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
           </div>
         </div>
       </section>
+
       <!-- Trending Product Section Start -->
       <section class="container space-bottom">
         <div class="content">
@@ -432,12 +433,13 @@
         </div>
       </section>
       <!-- Trending Product Section Start -->
+
       <!-- About Section Start -->
       <section class="container-fluid about-section">
         <div class="content space-top">
           <div class="row">
-            <div class="col-6"></div>
-            <div class="col-6 about-card">
+            <div class="col-md-6"></div>
+            <div class="col-md-6 about-card">
               <div class="section-titles">
                 <h5 class="tagline">About Us</h5>
                 <h2 class="title">Popular and Trending Products</h2>
@@ -532,6 +534,291 @@
         </div>
       </section>
       <!-- Service Section End -->
+
+      <!-- Featured Product Section Start -->
+      <section class="container-fluid space-top space-bottom featured-products">
+        <img
+          src="./assets/images/overlay-bg-left.png"
+          alt="bg-img"
+          class="featured-product-section-overlay"
+        />
+        <div class="content">
+          <div class="row">
+            <div class="col-12 section-titles">
+              <h5 class="tagline">best seller</h5>
+              <h2 class="title">Featured Products</h2>
+              <ul class="product-filter">
+                <li class="filter-item select"><a href="">All</a></li>
+                <li class="filter-item"><a href="">Food</a></li>
+                <li class="filter-item"><a href="">Fruits</a></li>
+                <li class="filter-item"><a href="">Health</a></li>
+                <li class="filter-item"><a href="">Meta</a></li>
+                <li class="filter-item"><a href="">Dairy</a></li>
+              </ul>
+            </div>
+            <div class="col-12 products-grid">
+              <div class="product-card">
+                <div class="button__horizontal"></div>
+                <div class="button__vertical"></div>
+
+                <span class="hot-tag inline-center">hot</span>
+                <div class="favorite-product inline-center">
+                  <i class="fa-solid fa-heart"></i>
+                </div>
+                <a href="./single-product.html"
+                  ><img
+                    src="./assets/images/products/01.png"
+                    alt="product-img"
+                    class="product-img"
+                /></a>
+                <div class="product-ratting">
+                  <i class="fa-solid fa-star"></i
+                  ><i class="fa-solid fa-star"></i>
+                  <i class="fa-regular fa-star"></i
+                  ><i class="fa-regular fa-star"></i
+                  ><i class="fa-regular fa-star"></i>
+                </div>
+                <h4 class="product-title text-capitalize">
+                  <a href="./single-product.html">Beef Steak</a>
+                </h4>
+                <div class="product-price">
+                  <del>$12</del>
+                  <span class="discount-price">$10 </span>
+                </div>
+                <button
+                  class="btn btn-add-to-cart text-uppercase btn-callToAction"
+                >
+                  Add to cart
+                </button>
+              </div>
+
+              <div class="product-card">
+                <div class="button__horizontal"></div>
+                <div class="button__vertical"></div>
+
+                <span class="hot-tag inline-center">hot</span>
+                <div class="favorite-product inline-center">
+                  <i class="fa-solid fa-heart"></i>
+                </div>
+                <a href="./single-product.html"
+                  ><img
+                    src="./assets/images/products/02.png"
+                    alt="product-img"
+                    class="product-img"
+                /></a>
+                <div class="product-ratting">
+                  <i class="fa-solid fa-star"></i
+                  ><i class="fa-solid fa-star"></i>
+                  <i class="fa-regular fa-star"></i
+                  ><i class="fa-regular fa-star"></i
+                  ><i class="fa-regular fa-star"></i>
+                </div>
+                <h4 class="product-title text-capitalize">
+                  <a href="./single-product.html">Broccoli</a>
+                </h4>
+                <div class="product-price">
+                  <del>$20</del>
+                  <span class="discount-price">$15 </span>
+                </div>
+                <button
+                  class="btn btn-add-to-cart text-uppercase btn-callToAction"
+                >
+                  Add to cart
+                </button>
+              </div>
+              <div class="product-card">
+                <div class="button__horizontal"></div>
+                <div class="button__vertical"></div>
+
+                <span class="hot-tag inline-center">hot</span>
+                <div class="favorite-product inline-center">
+                  <i class="fa-solid fa-heart"></i>
+                </div>
+                <a href="./single-product.html"
+                  ><img
+                    src="./assets/images/products/03.png"
+                    alt="product-img"
+                    class="product-img"
+                /></a>
+                <div class="product-ratting">
+                  <i class="fa-solid fa-star"></i
+                  ><i class="fa-solid fa-star"></i>
+                  <i class="fa-regular fa-star"></i
+                  ><i class="fa-regular fa-star"></i
+                  ><i class="fa-regular fa-star"></i>
+                </div>
+                <h4 class="product-title text-capitalize">
+                  <a href="./single-product.html">Strawberries</a>
+                </h4>
+                <div class="product-price">
+                  <del>$30</del>
+                  <span class="discount-price">$18 </span>
+                </div>
+                <button
+                  class="btn btn-add-to-cart text-uppercase btn-callToAction"
+                >
+                  Add to cart
+                </button>
+              </div>
+              <div class="product-card">
+                <div class="button__horizontal"></div>
+                <div class="button__vertical"></div>
+                <div class="favorite-product inline-center">
+                  <i class="fa-solid fa-heart"></i>
+                </div>
+                <a href="./single-product.html"
+                  ><img
+                    src="./assets/images/products/04.png"
+                    alt="product-img"
+                    class="product-img"
+                /></a>
+                <div class="product-ratting">
+                  <i class="fa-solid fa-star"></i
+                  ><i class="fa-solid fa-star"></i>
+                  <i class="fa-regular fa-star"></i
+                  ><i class="fa-regular fa-star"></i
+                  ><i class="fa-regular fa-star"></i>
+                </div>
+                <h4 class="product-title text-capitalize">
+                  <a href="./single-product.html">Fresh Honey</a>
+                </h4>
+                <div class="product-price">
+                  <del>$50</del>
+                  <span class="discount-price">$39</span>
+                </div>
+                <button
+                  class="btn btn-add-to-cart text-uppercase btn-callToAction"
+                >
+                  Add to cart
+                </button>
+              </div>
+              <div class="product-card">
+                <div class="button__horizontal"></div>
+                <div class="button__vertical"></div>
+                <div class="favorite-product inline-center">
+                  <i class="fa-solid fa-heart"></i>
+                </div>
+                <a href="./single-product.html"
+                  ><img
+                    src="./assets/images/products/05.png"
+                    alt="product-img"
+                    class="product-img"
+                /></a>
+                <div class="product-ratting">
+                  <i class="fa-solid fa-star"></i
+                  ><i class="fa-solid fa-star"></i>
+                  <i class="fa-regular fa-star"></i
+                  ><i class="fa-regular fa-star"></i
+                  ><i class="fa-regular fa-star"></i>
+                </div>
+                <h4 class="product-title text-capitalize">
+                  <a href="./single-product.html">Fresh Milk</a>
+                </h4>
+                <div class="product-price">
+                  <del>$10</del>
+                  <span class="discount-price">$08</span>
+                </div>
+                <button
+                  class="btn btn-add-to-cart text-uppercase btn-callToAction"
+                >
+                  Add to cart
+                </button>
+              </div>
+              <div class="product-card">
+                <div class="button__horizontal"></div>
+                <div class="button__vertical"></div>
+
+                <span class="hot-tag inline-center">hot</span>
+                <div class="favorite-product inline-center">
+                  <i class="fa-solid fa-heart"></i>
+                </div>
+                <a href="./single-product.html"
+                  ><img
+                    src="./assets/images/products/06.png"
+                    alt="product-img"
+                    class="product-img"
+                /></a>
+                <div class="product-ratting">
+                  <i class="fa-solid fa-star"></i
+                  ><i class="fa-solid fa-star"></i>
+                  <i class="fa-regular fa-star"></i
+                  ><i class="fa-regular fa-star"></i
+                  ><i class="fa-regular fa-star"></i>
+                </div>
+                <h4 class="product-title text-capitalize">
+                  <a href="./single-product.html">Mango Beverage</a>
+                </h4>
+                <div class="product-price">
+                  <del>$22</del>
+                  <span class="discount-price">$118 </span>
+                </div>
+                <button
+                  class="btn btn-add-to-cart text-uppercase btn-callToAction"
+                >
+                  Add to cart
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Featured Product Section End -->
+      <!-- Testimonial Section Start -->
+      <section class="container">
+        <div class="content space-top space-bottom">
+          <div class="row gx-5">
+            <div class="col-12 section-titles">
+              <h5 class="tagline">Testimonials</h5>
+              <h2 class="title">we our customers saying</h2>
+            </div>
+            <div class="col-md-6">
+              <div class="testimonial-card">
+                <span class="quote"
+                  ><i class="fa-solid fa-quote-left"></i
+                ></span>
+                <p>
+                  <q
+                    >Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Perferendis officiis pariatur, reprehenderit beatae quae
+                    odio.Perferendis officiis pariatur, reprehenderit
+                  </q>
+                </p>
+                <div class="service-ratting">
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                </div>
+                <h5 class="clint-info">Alina Parker <span>Ceo GTD</span></h5>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="testimonial-card">
+                <span class="quote"
+                  ><i class="fa-solid fa-quote-left"></i
+                ></span>
+                <p>
+                  <q
+                    >Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Perferendis officiis pariatur, reprehenderit beatae quae
+                    odio.Perferendis officiis pariatur, reprehenderit
+                  </q>
+                </p>
+                <div class="service-ratting">
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                </div>
+                <h5 class="clint-info">Alina Parker <span>Ceo GTD</span></h5>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Testimonial Section End -->
     </main>
 
     <!-- Script Files -->
@@ -540,5 +827,6 @@
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
       crossorigin="anonymous"
     ></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
